# yao-plugin-rust

./: .gitignore  readme.md
plugins/rust_grpc/: Cargo.toml  build.rs  readme.md
plugins/rust_grpc/src/: lib.rs  server.rs
plugins/rust_grpc/src/yao/: lib.rs  plugin.rs  proto.rs
