[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# # server binary
[[bin]]
name = "myplugin"
path = "src/server.rs"

# # client binary
# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.108"
log = "0.4.20"
log4rs = "1.2.0"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.10"
